--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(Qt5 COMPONENTS Xml Concurrent Widgets REQUIRED)
 
 set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
+set(TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/test)
 set(CAMERA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/camera)
 set(LIBRARIES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty)
 # src
@@ -26,9 +27,17 @@ file(GLOB SRC_FILES
     ${SRC_DIR}/*.hpp
     ${SRC_DIR}/*.cpp
     ${SRC_DIR}/*.ui)
+# test
+file(GLOB TEST_FILES
+    ${CAMERA_DIR}/usbhotplug.h
+    ${CAMERA_DIR}/usbhotplug.cpp
+    ${TEST_DIR}/*.h
+    ${TEST_DIR}/*.hpp
+    ${TEST_DIR}/*.cpp)
 # camera
 file(GLOB CAMERA_FILES
     ${CAMERA_DIR}/*.h
+    ${CAMERA_DIR}/*.hpp
     ${CAMERA_DIR}/*.cpp)
 list(APPEND SRC_FILES ${CAMERA_FILES})
 # opencv
@@ -48,7 +57,7 @@ set(LIBYUV_LIBS
 set(NCNN_DIR ${LIBRARIES_DIR}/ncnn)
 include_directories(${NCNN_DIR}/include)
 set(NCNN_STATIC ${NCNN_DIR}/lib/libncnn.a -fopenmp)
-
+# app
 add_executable(camera ${SRC_FILES})
 target_link_libraries(camera PRIVATE
     Qt5::Widgets
@@ -57,4 +66,5 @@ target_link_libraries(camera PRIVATE
     ${OpenCV_LIBS}
     ${LIBYUV_LIBS}
     ${NCNN_STATIC})
-
+# test
+add_executable(test ${TEST_FILES})
